Make transform tool preview be rendered asynchronously

That was needed to allow transform stroke to rerender some part
of the image to get group's projection with locked layers hidden.

BUG:396427